Added user activation
